tests/ui/derived_lhs_no_ref_unit.stderr
error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `FooUnit: quantities::LinearScaledUnit` is not satisfied
   --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
    |
21  | #[quantity(Foo * Bar)]
    | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::LinearScaledUnit` is not implemented for `FooUnit`
    |
note: required by a bound in `quantities::HasRefUnit`
   --> src/lib.rs
    |
    |     <Self as Quantity>::UnitType: LinearScaledUnit,
    |                                   ^^^^^^^^^^^^^^^^ required by this bound in `quantities::HasRefUnit`
    = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
note: required because of the requirements on the impl of `std::ops::Mul<Bar>` for `Foo`
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
note: required because of the requirements on the impl of `std::ops::Mul<Foo>` for `Bar`
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
note: required because of the requirements on the impl of `std::ops::Div<Foo>` for `Baz`
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
...
24 | struct Baz {}
   |        ^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
